# AAI-520-Final-Project

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  agent_memory.txt  autonomous_research_agent.ipynb  langchain.ipynb  main.py  pyproject.toml  retest.ipynb
agents/: __init__.py  research_agent.py
memory/: __init__.py
tests/: README_TESTS.md  __init__.py  run_all_tests.py  test_agent_functions.py  test_data.py  test_evaluator_optimizer.py  test_prompt_chaining.py  test_routing.py
utils/: __init__.py  config.py  data_fetchers.py  data_models.py  knowledge_graph.py  llm_factory.py
workflows/: __init__.py  demo_all_workflows.py  evaluator_optimizer.py  prompt_chaining.py  routing.py
