[project]
name = "aai-520-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-community>=2.0.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.8",
    "yfinance>=0.2.66",
    "wikipedia>=1.4.0",
    "duckduckgo-search>=6.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
]
